# hw27

./: db.sqlite3  log.txt  pyproject.toml  utils.py
ads/: admin.py  geo_helper.py  models.py  permissions.py  serializers.py  views.py
ads/migrations/: 0001_initial.py  0002_remove_ad_address.py  0002_rename_id_ad_id.py  0003_alter_ad_image.py  0004_alter_ad_image.py  0005_alter_author_options_and_more.py  0006_rename_category_id_ad_category.py  0007_rename_author_id_ad_author.py
ads/models/: __init__.py  ad_and_cat.py  loc_and_user.py  selection.py
ads/views/: __init__.py  ad_views.py  author_views.py  cat_views.py  index_view.py  location_views.py  selection_views.py
cat/: models.py  views.py
cat/migrations/: 0001_initial.py
fixtures/: ad.json  ads.json  author.json  categories.json
hw27/: settings.py  urls.py
hw27/urls/: __init__.py  ad_urls.py  admin_url.py  author_urls.py  cat_urls.py  index_url.py  location_urls.py  restframework_urls.py  selections_urls.py  tokenJWT_url.py
