[tool.poetry]
name = "hw27"
version = "0.1.0"
description = ""
authors = ["4Surpr1se <aaa_nnn_96@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.1"
psycopg2 = "^2.9.3"
Pillow = "^9.2.0"
geopy = "^2.2.0"
translate = "^3.6.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
